# expense-record-telegrambot

./: README.md  manage.py  pyproject.toml  requirements.txt  runserver.sh  text.xlsx
core/: admin.py  bot_func.py  models.py  urls.py
core/management/commands/: runbot.py
core/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_table.py  0003_alter_user_telegram_id.py
expense/: .models.py.swp  admin.py  bot_func.py  models.py  urls.py
expense/migrations/: 0001_initial.py  0002_expense_created_at_expense_updated_at.py  0003_rename_name_expense_title.py
expense_recorder/: asgi.py  settings.py  urls.py  wsgi.py
report/: bot_func.py  urls.py
